# automatization_meta_google

./: .env  .env.example  .gitignore  CONFIGURACION_N8N_COMPLETA.md  CONFIGURACION_N8N_LEADS_DUPLICADOS.md  DEPLOYMENT_GUIDE.md  EMBEDDED_SIGNUP_GUIDE.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  Frontend Deployment Troubleshooting.md  GET_INSTAGRAM_TOKENS.md  GOOGLE_SHEETS_TROUBLESHOOTING.md  IMPLEMENTATION_COMPLETE.md  INSTAGRAM_CHATBOT_SETUP.md  INSTRUCCIONES_N8N_TOKEN.md  LARAVEL_CLOUD_ENV_VARS.md  MIGRATION_SUCCESS.md  MULTI_TENANT_SETUP_GUIDE.md  MULTI_TENANT_SYSTEM.md  Makefile  N8N_ACTIVATION_GUIDE.md  N8N_AUTO_ACTIVATION.md  N8N_CONNECTION_SETUP.md  N8N_CORRECT_CONFIGURATION.md  N8N_CORRECT_SETUP.md  N8N_FLOW_CORRECTION.md  N8N_GEMINI_SETUP.md  N8N_OPENAI_JSON_FIX.md  N8N_OPENAI_JSON_STRUCTURE.md  N8N_PARSE_INCOMING_CORRECTION.md  N8N_PARSE_INCOMING_FINAL_CORRECTION.md  N8N_WEBHOOK_SETUP_STEP_BY_STEP.md  N8N_WORKFLOW_COMPLETE.md  PROGRESS.md  QUICK_START_GUIDE.md  README.md  SOLUCION_DUPLICADOS_N8N.md  SOLUCION_ERROR_N8N.md  SOLUCION_RAPIDA_N8N.md  TELEGRAM_BOT_SETUP.md  WHATSAPP_EMBEDDED_SIGNUP_EXPLICACION.md  (+30 more)
.atl/: skill-registry.md
.mcp/: config.json
backend/: .env.example  API_REFERENCE.md  README.md  SOLUCION_RAPIDA_N8N.md  (+6 more)
brain/: .env.example  pyproject.toml
brain/app/: main.py
brain/app/agent/: graph.py  state.py
brain/app/agent/nodes/: classify.py  ingest.py  respond.py  retrieve.py
brain/app/core/: db.py
brain/app/schemas/: chat.py
brain/app/services/: vector_store.py
brain/tests/: test_agent.py  test_api.py  test_vector_store.py
(+427 files in other folders)
