[tool.poetry]
name = "brain"
version = "0.1.0"
description = "Python LangGraph Agent Engine for Admetricas"
authors = ["Admetricas Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
langgraph = "^0.0.30"
langchain = "^0.1.13"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
